--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "opentok-react-native",
+  "name": "@vuspex/opentok-react-native",
   "version": "0.14.0",
   "description": "React Native components for OpenTok iOS and Android SDKs",
   "main": "src/index.js",
@@ -18,11 +18,14 @@
     "video",
     "react"
   ],
-  "author": "Manik Sachdeva <msach22gmail.com>",
+  "author": "Bryan Stevens <bryan@vuspex.com>",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/opentok/opentok-react-native.git"
+    "url": "https://github.com/bryanstevens314/opentok-react-native.git"
+  },
+  "publishConfig": {
+    "@bryan-stevens314:registry": "https://npm.pkg.github.com"
   },
   "dependencies": {
     "axios": "^0.19.0",
